ipc/ipdl/test/ipdl/ok/namespace_Basic.ipdl
namespace basic {

// sanity check of namespaced protocols

protocol namespace_Basic {

child:
    async Msg();

};

} // namespace basic
